# smol-llama

./: .env.example  .gitignore  README.md  hf_config.txt  pretrain.py  pyproject.toml
notebooks/: 1-train-tokenizer.ipynb
utils/: __init__.py  checkpoint.py  data.py  logging.py  lr_schedule.py  model.py  rotary.py
